// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillListPage /> renders correctly when connected 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#A6A6A6",
        }
      }
    >
      2 drills available
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#fff",
          "borderColor": "#2a9e91",
          "borderRadius": 5,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 30,
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 0,
          "width": "auto",
        }
      }
      testID="filterButton"
    >
      <Text />
      <Text
        style={
          Object {
            "color": "#2a9e91",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Filter
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 40,
      }
    }
    data={
      Array [
        Object {
          "author": "Author",
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 30,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "",
          "goals": Array [
            "Defense",
          ],
          "id": 3,
          "image": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 2,
          "seasonTiming": "",
          "steps": Array [
            Object {
              "animation": Object {
                "ids": Array [
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "offense",
                  "offense",
                  "offense",
                  "offense",
                  "offense",
                  "disc",
                ],
                "positions": Array [
                  Array [
                    Array [
                      Array [
                        0.3,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.3,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.45,
                        0.2,
                      ],
                    ],
                    Array [
                      Array [
                        0.2,
                        0.45,
                      ],
                    ],
                    Array [
                      Array [
                        0.45,
                        0.7,
                      ],
                    ],
                    Array [
                      Array [
                        0.7,
                        0.45,
                      ],
                    ],
                    Array [
                      Array [
                        0.3,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.16,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.3,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.36,
                        0.36,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.45,
                        0.2,
                      ],
                    ],
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.6,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.7,
                        0.45,
                      ],
                    ],
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.58,
                        0.36,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.6,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.45,
                        0.7,
                      ],
                    ],
                    undefined,
                    Array [
                      Array [
                        0.58,
                        0.58,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.3,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.2,
                        0.45,
                      ],
                    ],
                    Array [
                      Array [
                        0.36,
                        0.58,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.45,
                        0.2,
                      ],
                    ],
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.3,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.36,
                        0.36,
                      ],
                    ],
                  ],
                ],
                "texts": Array [
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "1",
                  "2",
                  "3",
                  "4",
                  "5",
                  "",
                ],
              },
              "id": 0,
            },
          ],
          "title": "Frisbee Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 30,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "",
          "goals": Array [
            "Defense",
          ],
          "id": 4,
          "image": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 2,
          "seasonTiming": "",
          "steps": Array [
            Object {
              "id": 0,
              "vimeoId": "462695757",
            },
          ],
          "title": "Frisbee Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
      ]
    }
    disableVirtualization={false}
    drillsToDisplay={
      Array [
        Object {
          "author": "Author",
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 30,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "",
          "goals": Array [
            "Defense",
          ],
          "id": 3,
          "image": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 2,
          "seasonTiming": "",
          "steps": Array [
            Object {
              "animation": Object {
                "ids": Array [
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "triangle",
                  "offense",
                  "offense",
                  "offense",
                  "offense",
                  "offense",
                  "disc",
                ],
                "positions": Array [
                  Array [
                    Array [
                      Array [
                        0.3,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.3,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.45,
                        0.2,
                      ],
                    ],
                    Array [
                      Array [
                        0.2,
                        0.45,
                      ],
                    ],
                    Array [
                      Array [
                        0.45,
                        0.7,
                      ],
                    ],
                    Array [
                      Array [
                        0.7,
                        0.45,
                      ],
                    ],
                    Array [
                      Array [
                        0.3,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.16,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.6,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.3,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.36,
                        0.36,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.45,
                        0.2,
                      ],
                    ],
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.6,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.7,
                        0.45,
                      ],
                    ],
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.58,
                        0.36,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.6,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.45,
                        0.7,
                      ],
                    ],
                    undefined,
                    Array [
                      Array [
                        0.58,
                        0.58,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.3,
                        0.6,
                      ],
                    ],
                    Array [
                      Array [
                        0.2,
                        0.45,
                      ],
                    ],
                    Array [
                      Array [
                        0.36,
                        0.58,
                      ],
                    ],
                  ],
                  Array [
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.45,
                        0.2,
                      ],
                    ],
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Array [
                        0.3,
                        0.3,
                      ],
                    ],
                    Array [
                      Array [
                        0.36,
                        0.36,
                      ],
                    ],
                  ],
                ],
                "texts": Array [
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "",
                  "1",
                  "2",
                  "3",
                  "4",
                  "5",
                  "",
                ],
              },
              "id": 0,
            },
          ],
          "title": "Frisbee Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 30,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "",
          "goals": Array [
            "Defense",
          ],
          "id": 4,
          "image": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 2,
          "seasonTiming": "",
          "steps": Array [
            Object {
              "id": 0,
              "vimeoId": "462695757",
            },
          ],
          "title": "Frisbee Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    navigation={
      Object {
        "navigate": [MockFunction],
        "setOptions": [MockFunction],
      }
    }
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              2
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              players
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Frisbee Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Defense
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              2
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              players
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Frisbee Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Defense
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<DrillListPage /> renders fitness drills sorted by duration 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#A6A6A6",
        }
      }
    >
      3 drills available
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 40,
      }
    }
    data={
      Array [
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 1,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 1,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "fitness",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 20,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 2,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 1,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "fitness",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 30,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 3,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 1,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "fitness",
          "visibleInList": true,
        },
      ]
    }
    disableVirtualization={false}
    drillsToDisplay={
      Array [
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 1,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 1,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "fitness",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 20,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 2,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 1,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "fitness",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 30,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 3,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 1,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "fitness",
          "visibleInList": true,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    navigation={
      Object {
        "navigate": [MockFunction],
        "setOptions": [MockFunction],
      }
    }
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              10
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              min
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Fitness Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Full body
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              20
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              min
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Fitness Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Full body
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              30
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              min
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Fitness Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Full body
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<DrillListPage /> renders frisbee drills sorted by number of players 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#A6A6A6",
        }
      }
    >
      3 drills available
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#fff",
          "borderColor": "#2a9e91",
          "borderRadius": 5,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 30,
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 0,
          "width": "auto",
        }
      }
      testID="filterButton"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "marginRight": 20,
              },
              Object {
                "color": "#2a9e91",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              Object {
                "marginRight": 5,
              },
            ],
            Object {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#2a9e91",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Filter
      </Text>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 40,
      }
    }
    data={
      Array [
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 2,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 6,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 1,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 14,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 3,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 20,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
      ]
    }
    disableVirtualization={false}
    drillsToDisplay={
      Array [
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 2,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 6,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 1,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 14,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
        Object {
          "author": "Author",
          "description": "Description of the drill",
          "durationInMinutes": 10,
          "equipment": "Equipment needs for the drill",
          "equipmentLabel": "None",
          "goals": Array [
            "Full body",
          ],
          "id": 3,
          "image": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
          "intensity": "Low",
          "level": "Beginner",
          "minimalPlayersNumber": 20,
          "seasonTiming": "Off-season",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Warmup",
              "vimeoId": "462695757",
            },
          ],
          "title": "Fitness Drill Title",
          "type": "frisbee",
          "visibleInList": true,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    navigation={
      Object {
        "navigate": [MockFunction],
        "setOptions": [MockFunction],
      }
    }
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              6
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              players
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Fitness Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Full body
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              14
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              players
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Fitness Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Full body
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(0,0,0)",
                "borderRadius": 5,
                "height": 80,
                "justifyContent": "center",
                "marginRight": 10,
                "padding": 10,
                "width": 80,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": 80,
                    "width": 80,
                  },
                  Object {
                    "borderRadius": 5,
                    "opacity": 0.5,
                  },
                ]
              }
            />
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              20
            </Text>
            <Text
              style={
                Object {
                  "color": "#e5e5e5",
                  "fontSize": 14,
                  "textAlign": "center",
                }
              }
            >
              players
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "padding": 5,
                "paddingBottom": 10,
                "paddingRight": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Author
            </Text>
            <Text
              numberOfLines={1}
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Fitness Drill Title
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Full body
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
